# Installer

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  main.py
.github/workflows/: ci.yml
src/: LogViewer.h  main.cpp
